# 2023.1_G1_Funcional

./: CHANGELOG.md  LICENSE  README.md  hangman.cabal
app/: Main.hs
data/: animais.txt  capitais_BR.txt  paises.txt  software.txt
src/: HangmanSay.hs  Interface.hs  Logic.hs  Match.hs  Words.hs
